# gnocchi

./: .gitignore  Cargo.toml  README.md  chunk.js  event.js  gl.js  index.html  main.js  message.js  player.js  state.js
model/: .gitignore  Cargo.toml
model/src/: constants.rs  data.rs  generate.rs  interact.rs  lib.rs  model.rs  util.rs
server/: .gitignore  Cargo.toml
server/src/: main.rs  message.rs  server.rs
