[package]
name = "server"
version = "0.1.0"
authors = ["Newton Ni <nwtnni@gmail.com>"]

[dependencies]
actix = "0.7"
actix-web = "0.7"
failure = "0.1"
futures = "0.1"
model = { path = "../model" }
nalgebra = { version = "0.16", features = ["serde-serialize"] }
nalgebra-glm = "0.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
